samples/_failures_safe/1761042876_645c09_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_977972a4.c: In function ‘main’:
./samples/SAFE/__tmp_977972a4.c:162:24: error: missing terminating " character
  162 |                 printf("Decompression buffer overflow
      |                        ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_977972a4.c:162:17: error: expected expression at end of input
  162 |                 printf("Decompression buffer overflow
      |                 ^~~~~~
./samples/SAFE/__tmp_977972a4.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_977972a4.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_977972a4.c:162:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_977972a4.c:162:17: error: expected declaration or statement at end of input
